# nix-devbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.zh-CN.md  default.nix  devbox.yaml  flake.nix  pyproject.toml
docs/: README.md  README.zh-CN.md  configuration.md  configuration.zh-CN.md
examples/: README.md  README.zh-CN.md
examples/base/: README.md  README.zh-CN.md  devbox.yaml  flake.nix
examples/nodejs/: devbox.yaml  flake.nix
examples/opencode/: README.md  README.zh-CN.md  devbox.yaml  flake.nix
examples/playwright/: devbox.yaml  flake.nix
examples/stacked-example/: README.md  README.zh-CN.md  demo.sh  devbox.yaml  flake.nix
src/nix_devbox/: __init__.py  builder.py  cli.py  config.py  core.py  exceptions.py  models.py  utils.py
tests/: test_cli.py  test_cli_args.py  test_config.py  test_env_expansion.py  test_env_var_expansion.py  test_flake.py  test_merge.py  test_utils.py
